# hearsay

./: .gitignore  .mcp.json  LICENSE  README.md  docker-compose.yml  start-dev.ps1  start-dev.sh
.claude/: settings.json  settings.local.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/.devcontainer/: devcontainer.json
backend/app/: __init__.py  config.py  crud.py  database.py  main.py  models.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: .gitkeep  4e8500321596_add_itunes_artwork_fields.py  5996301373f9_create_podcast_table.py  6a85b748a5ff_create_user_table.py  77032c1e3650_add_listen_notes_fields_and_cache_.py  79e2e11e8b94_initial_migration.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: auth.py  podcasts.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: user.py
backend/app/routers/: auth.py  users.py
backend/app/schemas/: __init__.py  user.py
backend/app/services/: auth.py  itunes.py  listenotes.py
backend/scripts/: prestart.sh
backend/tests/: test_itunes_service.py
docs/plans/: 2026-01-21-listen-notes-integration-design.md  2026-01-22-itunes-artwork-design.md  2026-01-22-itunes-artwork-implementation.md  2026-01-28-landing-page-redesign.md
mobile/: README.md  pubspec.yaml
mobile/test/: widget_test.dart
web/: README.md  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.ts
web/src/: app.css  (+2 more)
(+25 files in other folders)
